[project]
name = "async-sqlalchemy"
version = "0.1.0"
description = "SQL Alchemy[Asyncio] code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
]
