[project]
name = "async-sqlalchemy"
version = "0.1.0"
description = "SQL Alchemy[Asyncio] code"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]
